Update Bundler and bundled gems
Some new Rubocop cops are introduced in the update, hence the changes
outside Gemfile* files.

--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -47,6 +47,9 @@ RSpec/IndexedLet:
 RSpec/MessageSpies:
   Enabled: false
 
+RSpec/MetadataStyle:
+  EnforcedStyle: hash
+
 RSpec/MultipleExpectations:
   Max: 5
 
