--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -27,10 +27,17 @@ jobs:
         os: [ubuntu-latest, macos-latest]
         ruby: ['3.1', '3.2', '3.3']
         include:
+          - coverage_report_html: false
+            coverage_report_cobertura: false
           - os: ubuntu-latest
             ruby: '3.3'
-            coverage: true
+            coverage_report_html: ${{ github.ref_name == 'master' }}
+            coverage_report_cobertura: true
     runs-on: ${{ matrix.os }}
+    outputs:
+      with_junit: ${{ steps.junit.outcome == 'success' }}
+      with_simplecov_html: ${{ steps.simplecov_html.outcome == 'success' }}
+      with_simplecov_cobertura: ${{ steps.simplecov_cobertura.outcome == 'success' }}
     steps:
       - name: Checkout repository
         uses: actions/checkout@v4
@@ -40,18 +47,85 @@ jobs:
           ruby-version: ${{ matrix.ruby }}
           bundler-cache: true
       - name: Run specs
-        run: bundle exec rspec
+        id: rspec
+        run: |
+          bundle exec rspec \
+            --format progress \
+            --format RspecJunitFormatter \
+            --out tmp/rspec_junit/${{ matrix.os }}-${{ matrix.ruby }}.xml
         env:
-          COVERAGE: ${{ matrix.coverage }}
-      - name: Generate coverage artifact
-        if: ${{ matrix.coverage }}
+          # We want to customize the test suite name in JUnit reports, but we can't easily because
+          # of how the 3rd-party formatter works. Hence this hack, which hopefully won't conflict
+          # with the conventional use of the TEST_ENV_NUMBER variable.
+          # See https://github.com/sj26/rspec_junit_formatter/blob/3f79074a9987d722976542d7d6e2ebb470ad47d1/lib/rspec_junit_formatter.rb#L19
+          TEST_ENV_NUMBER: " (${{ matrix.os }}, ${{ matrix.ruby }})"
+          COVERAGE_REPORT_HTML: ${{ matrix.coverage_report_html }}
+          COVERAGE_REPORT_COBERTURA: ${{ matrix.coverage_report_cobertura }}
+      - name: Persist JUnit reports
+        id: junit
+        if: success() || (failure() && steps.rspec.outcome == 'failure')
+        uses: actions/upload-artifact@v4
+        with:
+          name: rspec_junit-${{ matrix.os }}-${{ matrix.ruby }}
+          path: tmp/rspec_junit/*
+      - name: Persist Cobertura reports
+        id: simplecov_cobertura
+        if: ${{ matrix.coverage_report_cobertura }}
+        uses: actions/upload-artifact@v4
+        with:
+          name: simplecov_cobertura
+          path: docs/coverage/coverage.xml
+      - name: Persist coverage website
+        id: simplecov_html
+        if: ${{ matrix.coverage_report_html }}
         uses: actions/upload-artifact@v4
         with:
           name: docs-coverage
           path: docs/coverage
 
+  report_specs:
+    needs:
+      - rspec
+    if: always() && needs.rspec.outputs.with_junit
+    runs-on: ubuntu-latest
+    permissions:
+      contents: read
+      checks: write
+    steps:
+      - uses: actions/checkout@v4
+      - uses: actions/download-artifact@v4
+        with:
+          merge-multiple: true
+          pattern: rspec_junit-*
+          path: tmp/rspec_junit
+      - uses: mikepenz/action-junit-report@v4
+        with:
+          report_paths: tmp/rspec_junit/*
+          suite_regex: '*'
+          annotate_only: true
+          check_title_template: '{{SUITE_NAME}}: {{TEST_NAME}}'
+
+  report_coverage:
+    needs:
+      - rspec
+    if: needs.rspec.outputs.with_simplecov_cobertura
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v4
+      - uses: actions/download-artifact@v4
+        with:
+          name: simplecov_cobertura
+          path: tmp
+      - uses: paambaati/codeclimate-action@v6
+        with:
+          coverageLocations: ${{github.workspace}}/tmp/coverage.xml:cobertura
+        env:
+          CC_TEST_REPORTER_ID: ${{ secrets.CC_TEST_REPORTER_ID }}
+
   yard:
     runs-on: ubuntu-latest
+    outputs:
+      with_html: ${{ steps.upload_artifact.outcome == 'success' }}
     steps:
       - name: Checkout repository
         uses: actions/checkout@v4
@@ -63,17 +137,19 @@ jobs:
       - name: Generate Ruby API documentation
         run : bundle exec yard doc
       - name: Generate Ruby API documentation artifact
+        if: github.ref_name == 'master'
+        id: upload_artifact
         uses: actions/upload-artifact@v4
         with:
           name: docs-ruby
           path: docs/ruby
 
   pages:
-    if: github.ref_name == 'master'
     needs:
       - rubocop
       - rspec
       - yard
+    if: needs.rspec.outputs.with_simplecov_html && needs.yard.outputs.with_html
     runs-on: ubuntu-latest
     permissions:
       contents: read
