--- a/.github/workflows/check.yml
+++ b/.github/workflows/check.yml
@@ -30,7 +30,7 @@ jobs:
       fail-fast: false
       matrix:
         os: [ubuntu-latest, macos-latest]
-        ruby: ['3.1', '3.2', '3.3']
+        ruby: ['3.1', '3.2', '3.3', '3.4']
         include:
           - coverage_report_html: false
             coverage_report_cobertura: false
