--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -37,11 +37,17 @@ Metrics/MethodLength:
 Metrics/ParameterLists:
   CountKeywordArgs: false
 
+Naming/PredicateMethod:
+  Enabled: false
+
 RSpec/ContextWording:
   Enabled: false
 
 RSpec/ExampleLength:
   Max: 15
+
+RSpec/IncludeExamples:
+  Enabled: false
 
 RSpec/IndexedLet:
   Enabled: false
